BEGIN;
--
-- Create model DocumentType
--
CREATE TABLE "api_documenttype" ("id" uuid NOT NULL PRIMARY KEY, "name" varchar(200) NOT NULL, "description" text NOT NULL);
--
-- Create model Service
--
CREATE TABLE "api_service" ("id" uuid NOT NULL PRIMARY KEY, "name" varchar(200) NOT NULL, "description" text NOT NULL, "response_time" varchar(100) NOT NULL);
--
-- Create model User
--
CREATE TABLE "api_user" ("password" varchar(128) NOT NULL, "last_login" timestamp with time zone NULL, "is_superuser" boolean NOT NULL, "id" uuid NOT NULL PRIMARY KEY, "email" varchar(254) NOT NULL UNIQUE, "curp" varchar(18) NULL UNIQUE, "name" varchar(200) NOT NULL, "phone" varchar(30) NOT NULL, "postal_code" varchar(10) NOT NULL, "colonia" varchar(200) NOT NULL, "street" varchar(200) NOT NULL, "block" varchar(50) NOT NULL, "exterior_number" varchar(10) NOT NULL, "role" varchar(20) NOT NULL, "is_active" boolean NOT NULL, "is_staff" boolean NOT NULL);
CREATE TABLE "api_user_groups" ("id" bigint NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, "user_id" uuid NOT NULL, "group_id" integer NOT NULL);
CREATE TABLE "api_user_user_permissions" ("id" bigint NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, "user_id" uuid NOT NULL, "permission_id" integer NOT NULL);
--
-- Create model Report
--
CREATE TABLE "api_report" ("id" uuid NOT NULL PRIMARY KEY, "folio" bigint NOT NULL UNIQUE CHECK ("folio" >= 0), "reported_at" timestamp with time zone NOT NULL, "latitude" numeric(10, 7) NOT NULL, "longitude" numeric(10, 7) NOT NULL, "location_text" varchar(300) NOT NULL, "report_type" varchar(50) NOT NULL, "description" text NOT NULL, "status" varchar(50) NOT NULL, "notes" text NOT NULL, "assigned_operator_id" uuid NULL, "estimated_time_interval" varchar(200) NOT NULL, "user_id" uuid NULL);
--
-- Create model Media
--
CREATE TABLE "api_media" ("id" uuid NOT NULL PRIMARY KEY, "storage_key" text NOT NULL, "filename" varchar(255) NOT NULL, "mime_type" varchar(100) NOT NULL, "uploaded_at" timestamp with time zone NOT NULL, "report_id" uuid NOT NULL);
--
-- Create model ServiceRequirement
--
CREATE TABLE "api_servicerequirement" ("id" bigint NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, "required" boolean NOT NULL, "notes" text NOT NULL, "document_type_id" uuid NOT NULL, "service_id" uuid NOT NULL);
--
-- Create model Tramite
--
CREATE TABLE "api_tramite" ("id" uuid NOT NULL PRIMARY KEY, "folio" bigint NOT NULL UNIQUE CHECK ("folio" >= 0), "created_at" timestamp with time zone NOT NULL, "status" varchar(50) NOT NULL, "notes" text NOT NULL, "service_id" uuid NOT NULL, "user_id" uuid NULL);
--
-- Create model Document
--
CREATE TABLE "api_document" ("id" uuid NOT NULL PRIMARY KEY, "storage_key" text NOT NULL, "filename" varchar(255) NOT NULL, "mime_type" varchar(100) NOT NULL, "size" bigint NULL, "uploaded_at" timestamp with time zone NOT NULL, "user_id" uuid NOT NULL, "document_type_id" uuid NOT NULL, "tramite_id" uuid NOT NULL);
--
-- Create model AuditLog
--
CREATE TABLE "api_auditlog" ("id" bigint NOT NULL PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY, "action" varchar(100) NOT NULL, "target_type" varchar(100) NOT NULL, "target_id" varchar(100) NOT NULL, "metadata" jsonb NULL, "created_at" timestamp with time zone NOT NULL, "user_id" uuid NULL);
CREATE INDEX "api_user_email_9ef5afa6_like" ON "api_user" ("email" varchar_pattern_ops);
CREATE INDEX "api_user_curp_a5c19f8e_like" ON "api_user" ("curp" varchar_pattern_ops);
ALTER TABLE "api_user_groups" ADD CONSTRAINT "api_user_groups_user_id_group_id_9c7ddfb5_uniq" UNIQUE ("user_id", "group_id");
ALTER TABLE "api_user_groups" ADD CONSTRAINT "api_user_groups_user_id_a5ff39fa_fk_api_user_id" FOREIGN KEY ("user_id") REFERENCES "api_user" ("id") DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE "api_user_groups" ADD CONSTRAINT "api_user_groups_group_id_3af85785_fk_auth_group_id" FOREIGN KEY ("group_id") REFERENCES "auth_group" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_user_groups_user_id_a5ff39fa" ON "api_user_groups" ("user_id");
CREATE INDEX "api_user_groups_group_id_3af85785" ON "api_user_groups" ("group_id");
ALTER TABLE "api_user_user_permissions" ADD CONSTRAINT "api_user_user_permissions_user_id_permission_id_a06dd704_uniq" UNIQUE ("user_id", "permission_id");
ALTER TABLE "api_user_user_permissions" ADD CONSTRAINT "api_user_user_permissions_user_id_f3945d65_fk_api_user_id" FOREIGN KEY ("user_id") REFERENCES "api_user" ("id") DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE "api_user_user_permissions" ADD CONSTRAINT "api_user_user_permis_permission_id_305b7fea_fk_auth_perm" FOREIGN KEY ("permission_id") REFERENCES "auth_permission" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_user_user_permissions_user_id_f3945d65" ON "api_user_user_permissions" ("user_id");
CREATE INDEX "api_user_user_permissions_permission_id_305b7fea" ON "api_user_user_permissions" ("permission_id");
ALTER TABLE "api_report" ADD CONSTRAINT "api_report_user_id_c5774f32_fk_api_user_id" FOREIGN KEY ("user_id") REFERENCES "api_user" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_report_user_id_c5774f32" ON "api_report" ("user_id");
ALTER TABLE "api_media" ADD CONSTRAINT "api_media_report_id_d355e710_fk_api_report_id" FOREIGN KEY ("report_id") REFERENCES "api_report" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_media_report_id_d355e710" ON "api_media" ("report_id");
ALTER TABLE "api_servicerequirement" ADD CONSTRAINT "api_servicerequireme_document_type_id_167a5f0b_fk_api_docum" FOREIGN KEY ("document_type_id") REFERENCES "api_documenttype" ("id") DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE "api_servicerequirement" ADD CONSTRAINT "api_servicerequirement_service_id_4e096ca1_fk_api_service_id" FOREIGN KEY ("service_id") REFERENCES "api_service" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_servicerequirement_document_type_id_167a5f0b" ON "api_servicerequirement" ("document_type_id");
CREATE INDEX "api_servicerequirement_service_id_4e096ca1" ON "api_servicerequirement" ("service_id");
ALTER TABLE "api_tramite" ADD CONSTRAINT "api_tramite_service_id_4dd79617_fk_api_service_id" FOREIGN KEY ("service_id") REFERENCES "api_service" ("id") DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE "api_tramite" ADD CONSTRAINT "api_tramite_user_id_2a018934_fk_api_user_id" FOREIGN KEY ("user_id") REFERENCES "api_user" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_tramite_service_id_4dd79617" ON "api_tramite" ("service_id");
CREATE INDEX "api_tramite_user_id_2a018934" ON "api_tramite" ("user_id");
ALTER TABLE "api_document" ADD CONSTRAINT "api_document_user_id_fffdf76b_fk_api_user_id" FOREIGN KEY ("user_id") REFERENCES "api_user" ("id") DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE "api_document" ADD CONSTRAINT "api_document_document_type_id_beda214b_fk_api_documenttype_id" FOREIGN KEY ("document_type_id") REFERENCES "api_documenttype" ("id") DEFERRABLE INITIALLY DEFERRED;
ALTER TABLE "api_document" ADD CONSTRAINT "api_document_tramite_id_4119da28_fk_api_tramite_id" FOREIGN KEY ("tramite_id") REFERENCES "api_tramite" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_document_user_id_fffdf76b" ON "api_document" ("user_id");
CREATE INDEX "api_document_document_type_id_beda214b" ON "api_document" ("document_type_id");
CREATE INDEX "api_document_tramite_id_4119da28" ON "api_document" ("tramite_id");
ALTER TABLE "api_auditlog" ADD CONSTRAINT "api_auditlog_user_id_b15d4175_fk_api_user_id" FOREIGN KEY ("user_id") REFERENCES "api_user" ("id") DEFERRABLE INITIALLY DEFERRED;
CREATE INDEX "api_auditlog_user_id_b15d4175" ON "api_auditlog" ("user_id");
CREATE INDEX "api_auditlo_action_e69819_idx" ON "api_auditlog" ("action", "created_at");
COMMIT;
